EDITED ApplicantManager.java